# config/routes.rb
@@ -7,12 +7,15 @@ Rails.application.routes.draw do
       match "/authenticate" => "open#create_token", via: :post
       match "/test" => "auth#get_user", via: :get
       match "/course" => "course#create", via: :post
-      match "/course" => "course#index", via: :get
+      match "/courses" => "course#index", via: :get
       match "/course/:id" => "course#update", via: [:put, :patch]
       match "/course/:id" => "course#show", via: :get
-      match "/course/student" => "course_student#create", via: :post
-      match "/course/student_bulk" => "course_student#create_bulk", via: :post
-      match "/course/student/:course" => "course_student#index", via: :get
+      match "/course/:course/student" => "course_student#create", via: :post
+      match "/course/:course/student_bulk" => "course_student#create_bulk", via: :post
+      match "/course/:course/students" => "course_student#index", via: :get
+      match "/course/:course/leader" => "course_instructor#create", via: :post
+      match "/course/:course/leader_bulk" => "course_instructor#create_bulk", via: :post
+      match "/course/:course/leaders" => "course_instructor#index", via: :get
     end
 
     root 'application#index'
